# Homomorphic_Encryption_CPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_gmp.sh  install_ntl.sh
.github/workflows/: c-cpp.yml
src/paillier/: PaillierCipher.cpp  PaillierCipher.h  PaillierKeyPairGenerator.cpp  PaillierKeyPairGenerator.h  PaillierPrivateKey.h  PaillierPublicKey.cpp  PaillierSignature.cpp  PaillierSignature.h
test/: PaillierTest.cpp
